--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -73,6 +73,9 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
+      
+    - name: Reinstall feeds fix no dependence issue
+      run: cd openwrt && ./scripts/feeds install -a
 
     - name: Load custom configuration
       run: |
